# litmus

./: .beans.yml  .envrc  .gitignore  .mise.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  justfile
.beans/: litmus-0uoe--update-litmus-cli-to-render-termoutput.md  litmus-1d6v--expand-reach-polish-m11m13.md  litmus-1vws--compact-scene-rendering-mode.md  litmus-1wbl--lightdark-and-contrast-quality-filters.md  litmus-28sq--build-ansi-to-spans-parser-using-vte.md  litmus-2ixq--curate-10-20-high-quality-themes.md  litmus-2mjz--live-terminal-capture.md  litmus-2w3r--provider-ecosystem-view.md  litmus-2wte--m3-terminal-ecosystem-rendering.md  litmus-2xrw--visual-polish-and-edge-case-handling.md  litmus-3fax--compact-expandable-palette-display.md  litmus-3lcp--research-existing-terminal-output-datasets-and-ans.md  litmus-3px1--improve-compare-view-layout.md  litmus-3svg--provider-scoped-url-routing-with-fixture-anchors.md  litmus-49jz--fixtures-iteration-more-realistic-better-color-sho.md  litmus-4ai1--cap-compare-at-3-themes.md  litmus-4t4e--define-canonical-theme-file-format.md  litmus-4tgw--fix-sidebar-shortlist-palette-and-compare-view-iss.md  litmus-5tj3--theme-quality-checks.md  (+112 more)
crates/litmus-web/: Cargo.toml  Dioxus.toml  _headers
crates/litmus-web/assets/: style.css
crates/litmus-web/src/: components.rs  family.rs  fixtures.rs  main.rs  scene_renderer.rs  screenshot_view.rs  shell.rs  sidebar.rs  state.rs  term_renderer.rs  themes.rs
crates/litmus-web/src/pages/: compare.rs  scene_across.rs  theme_detail.rs  theme_list.rs
(+124 files in other folders)
