[package]
name = "litmus-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["web"]
web = ["dioxus/web", "dioxus/router"]

[[bin]]
name = "litmus-web"
path = "src/main.rs"

[dependencies]
litmus-model.workspace = true
dioxus = "0.7"
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
